TSP-220 - Fix cookie offcanvas menu is too big

--- a/Resources/app/storefront/src/scss/layout/_navigation-offcanvas.scss
+++ b/Resources/app/storefront/src/scss/layout/_navigation-offcanvas.scss
@@ -41,14 +41,17 @@ $navigation-offcanvas-padding-lg: 60px;
                 }
             }
         }
-
-        @include media-breakpoint-up(md) {
-            width: 70%;
-        }
     }
 
     .offcanvas-content-container {
         padding-top: 12px;
+    }
+
+    @include media-breakpoint-up(md) {
+        &.navigation-offcanvas {
+            width: 70%;
+            max-width: 600px;
+        }
     }
 }
 
